@@ -198,6 +198,23 @@ name|methods
 operator|.
 name|multipart
 operator|.
+name|FilePart
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|httpclient
+operator|.
+name|methods
+operator|.
+name|multipart
+operator|.
 name|Part
 import|;
 end_import
@@ -215,7 +232,7 @@ name|methods
 operator|.
 name|multipart
 operator|.
-name|PartBase
+name|PartSource
 import|;
 end_import
 begin_import
@@ -248,19 +265,6 @@ operator|.
 name|params
 operator|.
 name|HttpMethodParams
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|commons
-operator|.
-name|io
-operator|.
-name|IOUtils
 import|;
 end_import
 begin_import
@@ -1470,41 +1474,19 @@ name|charSet
 init|=
 literal|null
 decl_stmt|;
-name|String
-name|transferEncoding
+name|PartSource
+name|source
 init|=
-literal|null
-decl_stmt|;
-name|parts
-operator|.
-name|add
-argument_list|(
 operator|new
-name|PartBase
-argument_list|(
-name|c
-operator|.
-name|getName
+name|PartSource
 argument_list|()
-argument_list|,
-name|c
-operator|.
-name|getContentType
-argument_list|()
-argument_list|,
-name|charSet
-argument_list|,
-name|transferEncoding
-argument_list|)
 block|{
 annotation|@
 name|Override
-specifier|protected
+specifier|public
 name|long
-name|lengthOfData
+name|getLength
 parameter_list|()
-throws|throws
-name|IOException
 block|{
 return|return
 name|c
@@ -1513,48 +1495,57 @@ name|getSize
 argument_list|()
 return|;
 block|}
+specifier|public
+name|String
+name|getFileName
+parameter_list|()
+block|{
+return|return
+name|c
+operator|.
+name|getName
+argument_list|()
+return|;
+block|}
 annotation|@
 name|Override
-specifier|protected
-name|void
-name|sendData
-parameter_list|(
-name|OutputStream
-name|out
-parameter_list|)
+specifier|public
+name|InputStream
+name|createInputStream
+parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|InputStream
-name|in
-init|=
+return|return
 name|c
 operator|.
 name|getStream
 argument_list|()
+return|;
+block|}
+block|}
 decl_stmt|;
-try|try
-block|{
-name|IOUtils
+name|parts
 operator|.
-name|copy
+name|add
 argument_list|(
-name|in
-argument_list|,
-name|out
-argument_list|)
-expr_stmt|;
-block|}
-finally|finally
-block|{
-name|in
+operator|new
+name|FilePart
+argument_list|(
+name|c
 operator|.
-name|close
+name|getName
 argument_list|()
-expr_stmt|;
-block|}
-block|}
-block|}
+argument_list|,
+name|source
+argument_list|,
+name|c
+operator|.
+name|getContentType
+argument_list|()
+argument_list|,
+name|charSet
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
